<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout"
    tools:context="com.example.shweta.test.sample">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sample">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            android:layout_centerInParent="true"
            android:textColor="@color/text"
            android:padding="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:textSize="25sp"
            />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sample">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/user60w"
            android:id="@+id/image"
                       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:layout_centerInParent="true"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/image"
        android:id="@+id/log"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Name"
            android:textSize="14sp"
            android:id="@+id/login_name"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/user20"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_textedit"
            android:layout_below="@+id/log"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ps"
            android:textSize="14sp"
            android:id="@+id/login_pass"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/padlock20b"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_textedit"
            android:layout_below="@+id/login_name"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rem"
            android:textColor="@color/text"
            android:layout_below="@+id/login_pass"
            android:textSize="15sp"
            android:id="@+id/checkbox"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forgot"
            android:textSize="15sp"
            android:id="@+id/forgot"
            android:layout_below="@+id/checkbox"
            android:textColor="@color/forgot"
            android:gravity="center"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:layout_below="@+id/forgot"
            android:id="@+id/next"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/text"
            android:background="@color/next"
            />
    </RelativeLayout>
    </RelativeLayout>

