<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout"
    tools:context="com.example.shweta.test.signup">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/sign"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_centerInParent="true"
            android:textColor="@color/text"
            android:padding="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:textSize="25sp"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/sign"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:id="@+id/signp_first_name"
            android:hint="@string/First"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/user20"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_textedit"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:id="@+id/signup_last_name"
            android:hint="@string/Last"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/user20"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_textedit"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:id="@+id/signup_DOB"
            android:hint="@string/DOB"
            android:focusable="false"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/dateto20"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_textedit"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_weight="1"
            android:hint="@string/Email"
            android:id="@+id/signup_email"
             android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:drawableLeft="@drawable/email20b"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/border_textedit"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_weight="1"
        android:id="@+id/signup_password"
        android:hint="@string/ps"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/padlock20b"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@drawable/border_textedit"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit"
            android:id="@+id/Submit"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textColor="@color/text"
            android:background="@color/create"
            />
</LinearLayout>
</RelativeLayout>
